<resources>
    <string name="app_name">TeluguMovieQuiz</string>
    <string name="base_url" translatable="false">http://192.168.1.5:8888</string>
    <string name="quiz_screen_server_err" translatable="false">Server Error. Please try after some time</string>
    <string name="login_email_hint">Type Registered E-Mail Id here</string>
    <string name="login_password_hint">Type Configured Password here</string>
    <string name="login_screen_already_have_acc" translatable="false">Already \nhave an \nAccount?</string>
    <string name="login_screen_forgot_password">Forgot Password?</string>
    <string name="login_screen_new_user_register_now" translatable="false">New user? Register Now</string>
    <string name="login_screen_login_text">Submit</string>
    <string name="user_login_fail_msg" translatable="false">Login not successful. Please use forgot password option if required</string>
    <string name="user_login_success_msg" translatable="false">Login successful</string>
    <string name="user_forgot_passwd_success_msg" translatable="false">Password Reset. Please check your mail and login</string>
    <string name="terms_conditions1" translatable="false">By Clicking submit, I have read and agreed to the Terms of Use and Privacy Policy. Click here to View Terms and Conditions</string>
    <string name="terms_conditions2" translatable="false">By Clicking submit, I have read and agreed to the Terms of Use and Privacy Policy available on the Site</string>
    <string name="login_enter_captcha" translatable="false">Enter sum here</string>
    <string name="login_initial_captcha" translatable="false">9+8</string>
    <string name="login_reload_captcha_desc" translatable="false">Reload Desc</string>
    <string name="user_profile_email" translatable="false">E-Mail cannot be updated</string>
    <string name="user_profile_code" translatable="false">My Referral Code cannot be updated</string>
    <string name="user_profile_boss_name" translatable="false">My Boss Name cannot be updated</string>
    <string name="user_profile_boss_code" translatable="false">My Boss Code Name cannot be updated</string>
    <string name="user_profile_name" translatable="false">Change Your Name Here</string>
    <string name="user_profile_n_p" translatable="false">Change Your Password Here</string>
    <string name="user_profile_con_p" translatable="false">Type Confirm Password Here</string>
    <string name="user_profile_update_but" translatable="false">Update</string>
    <string name="user_profile_email_label" translatable="false">Registered Mail Id:</string>
    <string name="user_profile_mycode_label" translatable="false">My Referral Code:</string>
    <string name="user_profile_boss_name_label" translatable="false">My Referral Person Name:</string>
    <string name="user_profile_boss_code_label" translatable="false">My Referral Person Code:</string>
    <string name="user_profile_myname_label" translatable="false">My Name:</string>
    <string name="user_profile_new_password_label" translatable="false">Change Password:</string>
    <string name="user_profile_confirm_password_label" translatable="false">Confirm Password:</string>
    <string name="new_user_email_hint" translatable="false">Register with Frequently Used E-Mail Id</string>
    <string name="new_user_password" translatable="false">Configure Password with 8 or more chars</string>
    <string name="configure_user_password" translatable="false">Confirm Password</string>
    <string name="new_user_user_name" translatable="false">Enter Your Name with 2 to 20 chars length</string>
    <string name="newuser_referal_code_hint" translatable="false">Enter Referral Code</string>
    <string name="newuser_send_code" translatable="false">Send Verification Code</string>
    <string name="newuser_verify_code" translatable="false">Verify Code</string>
    <string name="newuser_register_text" translatable="false">Submit</string>
    <string name="new_user_register_success" translatable="false">User successfully registered</string>
    <string name="new_user_screen_intro" translatable="false">Here\'s\nyour first\nstep with \nus!</string>
    <string name="new_user_already_registered" translatable="false">Already have an account?</string>
    <string name="referral_code_more_info" translatable="false">Read more</string>
    <string name="referral_code_helper_text" translatable="false">Portion of your winning money paid to user with this code. Important read more details</string>
    <string name="menu_current_games" translatable="false">Current Games</string>
    <string name="menu_enrolled_games" translatable="false">Enrolled Games</string>
    <string name="menu_history_games" translatable="false">History Games</string>
    <string name="menu_chat" translatable="false">Chat</string>
    <string name="menu_referal" translatable="false">My Referrals</string>
    <string name="menu_history" translatable="false">My Games</string>
    <string name="menu_transfer_money" translatable="false">Transfer Money</string>
    <string name="menu_user_profile" translatable="false">My Profile</string>
    <string name="menu_customercare" translatable="false">Customer Care</string>
    <string name="menu_logout" translatable="false">Logout</string>
    <string name="versionLabel" translatable="false">Ver 1.0.0</string>
    <string name="customer_care" translatable="false">Customer Care</string>
    <string name="share_it" translatable="false">Invite Friends</string>
    <string name="kyc" translatable="false">KYC</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="nav_header_title" translatable="false">Telugu Movie Quiz</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="menu_add_money" translatable="false">Add Money</string>
    <string name="nav_withdraw_view" translatable="false">Money Withdraw</string>
    <string name="menu_transactions" translatable="false">Money History</string>
    <string name="wd_history" translatable="false">Withdraw History</string>
    <string name="money_stats" translatable="false">Money Stats</string>
    <string name="menu_coin_store" translatable="false">Coin Store</string>
    <string name="menu_coin_wd" translatable="false">Redeem Coins</string>
    <string name="coin_history" translatable="false">Coin History</string>
    <string name="redeem_history" translatable="false">Redeem History</string>
    <string name="redeem_stats" translatable="false">Redeem Stats</string>
    <string name="chat_msg" translatable="false">You have a new Chat Msg</string>
    <string name="dialog_close" translatable="false">Close</string>
    <string name="leave_but_text" translatable="false">Leave Game</string>
    <string name="speed_but_text" translatable="false">Network Speed</string>
    <string name="gameid_text" translatable="false">Game Id:</string>
    <string name="starts_text" translatable="false">Starts At:</string>
    <string name="starts_user_ct" translatable="false">Users:</string>
    <string name="starts_user_ct_val" translatable="false">10</string>
    <string name="timerInitialVal" translatable="false">0</string>
    <string name="game_start_msg" translatable="false">Game Locked.Cannot Leave.You can check prize details</string>
    <string name="game_rejoin_msg" translatable="false">Successfully Rejoined</string>
    <string name="fifty_fifty" translatable="false">50–50</string>
    <string name="back" translatable="false">Back</string>
    <string name="home" translatable="false">Home</string>
    <string name="flip_question" translatable="false">Flip Question</string>
    <string name="more_game_options" translatable="false">More Options</string>
    <string name="game_join_success_msg" translatable="false">Successfully Joined Game</string>
    <string name="game_join_fail_msg" translatable="false">Not Joined the Game</string>
    <string name="game_cancellation_success_msg" translatable="false">Game cancelled as minimum users not present. Your ticket money reverted status : Success</string>
    <string name="game_cancellation_fail_msg" translatable="false">Game cancelled as minimum users not present. Your ticket money reverted status : Fail will be credited in 1 to 2 days</string>
    <string name="ques_initial_text" translatable="false">Your question appears here with 4 options. Time and Correct answers matter. Choose the right answer in first attempt. No Second chance and No Negative Marks.</string>
    <string name="optionA" translatable="false">Option A</string>
    <string name="optionB" translatable="false">Option B</string>
    <string name="optionC" translatable="false">Option C</string>
    <string name="optionD" translatable="false">Option D</string>
    <string name="test_user_name" translatable="false">ggraj.pec@gmail.com</string>
    <string name="myreferal_intro" translatable="false">This view shows the users registered with your referral code. When they play and win, you earn money</string>
    <string name="prev_data_set" translatable="false">Previous Set</string>
    <string name="next_data_set" translatable="false">Next Set</string>
    <string name="table_view_col1_xml" translatable="false">Col10</string>
    <string name="table_view_col2_xml" translatable="false">Col2</string>
    <string name="table_view_col3_xml" translatable="false">Col3</string>
    <string name="table_view_col4_xml" translatable="false">Col4</string>
    <string name="table_view_col5_xml" translatable="false">Col5</string>
    <string name="table_view_col6_xml" translatable="false">Col6</string>
    <string name="table_view_col7_xml" translatable="false">Col7</string>
    <string name="table_view_col8_xml" translatable="false">Col8</string>
    <string name="transactionview_intro" translatable="false">This view shows all the money transactions done by you in all Main,Win,Referral accounts. Use filter options below.O.B# means Opening Balance in Account. C.B# means Closing Balance</string>
    <string name="history_games_intro" translatable="false">This view shows the games played the you.</string>
    <string name="history_games_col5" translatable="false">View Result</string>
    <string name="wd_more_view_options" translatable="false">Filter on Request Status</string>
    <string name="wd_col1" translatable="false">S.No</string>
    <string name="wd_col2" translatable="false">Reference Id#</string>
    <string name="wd_col3" translatable="false">Withdrawn Amount</string>
    <string name="wd_col4" translatable="false">Request Status</string>
    <string name="wd_col5" translatable="false">Opened Date</string>
    <string name="wd_col6" translatable="false">Cancel Request</string>
    <string name="wd_col7" translatable="false">More Options</string>
    <string name="more_content" translatable="false">More options</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="screenshot_add" translatable="false">Add</string>
    <string name="screenshot_remove" translatable="false">Remove</string>
    <string name="ccCreateTicketBut" translatable="false">Create Ticket</string>
    <string name="ccWDReqIntro" translatable="false">If the withdraw request is open for more than 4 days then issue can be raised here</string>
    <string name="ccOthersHint" translatable="false">Enter the issue description in less than 250 chars</string>
    <string name="status_bar_msg" translatable="false">Recent Winning Messages</string>
    <string name="common_total_text" translatable="false">1 - 10 of 100</string>
    <string name="faq" translatable="false">FAQs</string>
    <string name="moreGames" translatable="false">More Games</string>
</resources>