<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_current_games"
            android:title="@string/menu_current_games" />
        <item
            android:id="@+id/nav_enrolled_games"
            android:title="@string/menu_enrolled_games" />
        <item
            android:id="@+id/nav_history_games"
            android:title="@string/menu_history_games" />
        <item
            android:id="@+id/nav_chat"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_referals"
            android:title="@string/menu_referal" />
        <item
            android:id="@+id/nav_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_transactions"
            android:title="@string/menu_transactions" />
        <item
            android:id="@+id/nav_wallet"
            android:title="@string/menu_wallet" />
    </group>
</menu>