<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/col1"
        style="@style/tableHeaderTextBox"
        android:text="@string/table_view_col1_xml" />
    <TextView
        android:id="@+id/col2"
        style="@style/tableHeaderTextBox"
        android:text="@string/table_view_col2_xml"/>
    <TextView
        android:id="@+id/col3"
        style="@style/tableHeaderTextBox"
        android:text="@string/table_view_col3_xml" />
    <TextView
        android:id="@+id/col4"
        style="@style/tableHeaderTextBox"
        android:text="@string/table_view_col4_xml"/>
    <TextView
        android:id="@+id/col5"
        style="@style/tableHeaderTextBox"
        android:text="@string/table_view_col5_xml"/>
    <Button
        android:id="@+id/col6"
        style="@style/wdCancelButton"
        android:text="@string/wd_col6" />
    <ImageButton
        android:id="@+id/col7"
        android:layout_width="1px"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:scaleType="center"
        android:src="@drawable/ic_more"
        android:contentDescription="@string/more_content" />
 </LinearLayout>