<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/col1"
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/table_view_col1_xml"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/col2"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/table_view_col2_xml"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/col3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/table_view_col3_xml"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/col4"
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/table_view_col4_xml"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/col5"
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/table_view_col5_xml"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/col6"
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/table_view_col6_xml"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/col7"
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/table_view_col7_xml"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/col8"
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/table_view_col8_xml"
        android:textSize="15sp" />
</LinearLayout>