<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/col1"
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/wd_col1"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/col2"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/wd_col2"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/col3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/wd_col3"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/col4"
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/wd_col4"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/col5"
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/wd_col5"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/col6"
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/wd_col6"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/col7"
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/wd_col7"
        android:textSize="15sp" />
 </LinearLayout>