<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/col1"
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/table_view_col1_xml"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/col2"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/table_view_col2_xml"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/col3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/table_view_col3_xml"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/col4"
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/table_view_col4_xml"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/col5"
        style="@style/parent"
        android:textAlignment="center"
        android:textSize="17sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/history_games_col5"/>
</LinearLayout>