<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="@dimen/view_gap_from_top"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/myhistory_intro"
            style="@style/viewIntroText"
            android:text="@string/history_games_intro" />
        <View
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_height="1dp"/>
        <TextView
            android:id="@+id/view_total"
            style="@style/filterLayerText"
            android:text="@string/common_total_text" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            style="@style/viewTable"/>
        <LinearLayout
            android:id="@+id/next_prev_buts"
            style="@style/next_prev_parent">
            <Button
                android:id="@+id/myreferals_prev_but"
                android:layout_marginEnd="@dimen/next_prev_but_gap"
                style="@style/next_prev_but"
                android:text="@string/prev_data_set"
                android:contentDescription="@string/prev_data_set" />
            <Button
                android:id="@+id/myreferals_next_but"
                android:layout_marginStart="@dimen/next_prev_but_gap"
                style="@style/next_prev_but"
                android:text="@string/next_data_set"
                android:contentDescription="@string/next_data_set"/>
        </LinearLayout>
        <TextView
            android:id="@+id/winMsgs"
            android:text="@string/status_bar_msg"
            style="@style/StatusBarMsg"/>
    </LinearLayout>
</ScrollView>