<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/intro"
            style="@style/viewIntroText"
            android:text="@string/ccWDReqIntro" />
        <View
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_height="1dp"/>
        <RelativeLayout
            android:layout_marginTop="@dimen/margin_top_large"
            android:layout_width="wrap_content"
            android:layout_height="150dp">
            <ImageView
                android:id="@+id/addBtn"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/test_user_name"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:src="@drawable/document" />
            <Button
                android:id="@+id/addScreenShot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/margin_top_small"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/addBtn"
                android:text="@string/screenshot_add" />
            <Button
                android:id="@+id/removeScreenShot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_top_small"
                android:layout_alignParentBottom="true"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/addBtn"
                android:text="@string/screenshot_remove" />
        </RelativeLayout>
        <Button
            style="@style/normalButton"
            android:layout_marginTop="@dimen/margin_top_small"
            android:id="@+id/ccCreateBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/ccCreateTicketBut"/>
    </LinearLayout>
</ScrollView>