<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/transactionview_intro"
            android:id="@+id/myreferals_intro">
        </TextView>
        <Button
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/filterStatus"
            android:text="@string/wd_more_view_options"
            android:layout_gravity="start"
            android:gravity="start"
            style="@style/button"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="2dp"
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:gravity="end"
            android:id="@+id/next_prev_buts">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:id="@+id/myreferals_prev_but"
                style="@style/button"
                android:text="@string/prev_data_set"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                style="@style/button"
                android:id="@+id/myreferals_next_but"
                android:text="@string/next_data_set"/>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:src="@drawable/floating_action"
                android:contentDescription="@string/submit"
                android:layout_margin="16dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>